Adjust why mhairi margins

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -166,16 +166,14 @@ layout: 'base.njk'
 
 <!-- why mhairi section -->
 <section class="why-mhairi">
-    <div class="why-mhairi-title">
-        <h3 class="sect-title rob-font">
-            Why Mhairi
-        </h3>
-    </div>
     <div class="why-mhairi-content">
-        <div class="home-about-title">
-            <h2 class="home-about-subtitle">
-            Choosing the right coach for you is an important step in the process, I get it. So why me? 
+        <div class="why-mhairi-title">
+            <h2 class="logo-2">
+                Why Mhairi
             </h2>
+            <h3 class="home-about-subtitle fw-b">
+            Choosing the right coach for you is an important step in the process, I get it. So why me? 
+            </h3>
         </div>
         <div class="home-about-img">
             <img src="static/img/Mhairi_pics/walking-away.jpg" alt="mhairi-life-coach-walking-away">
@@ -187,7 +185,7 @@ layout: 'base.njk'
             <p class="normal-text">
                 I worked for many years in senior roles with fancy job titles and salaries, but I was never truly fulfilled. After completing a degree in Medical Biology, I knew my passion lived outside the lab. But what to do? Youthful ignorance firmly in hand, I gravitated to where I thought I ‘should’ be, led entirely by society’s depiction of success. When I got there, I realised I’d been so busy becoming what I thought I should be, that I’d completely lost touch with who I actually wanted to be. What changed my world? 
             </p>
-            <p class="normal-text">
+            <p class="normal-text fw-b">
                 Complete disaster.
             </p>
             <p class="normal-text">
