--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1980,7 +1980,7 @@ a:focus {
 .about-cta-btn {
   height: auto;
   margin: auto 1.5em;
-  padding: .5em 1em;
+  padding: .5em .5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2000,7 +2000,7 @@ a:focus {
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .about-cta-btn {
-    margin: auto 2.5em;
+    margin: auto 4.5em;
   }
 }
 
@@ -4408,6 +4408,18 @@ input[type='checkbox'] {
   margin: 2em 0;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .why-mhairi-title {
+    margin: 2em 1em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-title {
+    margin: 0;
+  }
+}
+
 .why-mhairi-content {
   margin-top: 0;
   padding-bottom: 4em;
@@ -4423,14 +4435,14 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) {
   .why-mhairi-content {
     background-color: white;
-    height: 31.5em;
+    height: 34.5em;
     padding-bottom: 0;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: auto 25em 2em 16em auto;
         grid-template-columns: auto 25em 2em 16em auto;
-    -ms-grid-rows: 4em 23em auto;
-        grid-template-rows: 4em 23em auto;
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
   }
 }
 
@@ -4438,39 +4450,34 @@ input[type='checkbox'] {
   .why-mhairi-content {
     -ms-grid-columns: auto 25em 2em 16em auto;
         grid-template-columns: auto 25em 2em 16em auto;
-    -ms-grid-rows: 4em 20em auto;
-        grid-template-rows: 4em 20em auto;
     height: 29em;
   }
 }
 
-@media only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
+@media only screen and (min-width: 1200px) {
   .why-mhairi-content {
-    height: 25em;
-    -ms-grid-rows: 4em 18em auto;
-        grid-template-rows: 4em 18em auto;
+    height: 29em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .why-mhairi-content {
     height: 25em;
-    -ms-grid-rows: 4em 16em auto;
-        grid-template-rows: 4em 16em auto;
   }
 }
 
-.why-mhairi-content .home-about-title {
+.why-mhairi-content .why-mhairi-title {
   padding-top: 0;
 }
 
 @media only screen and (min-width: 768px) {
-  .why-mhairi-content .home-about-title {
+  .why-mhairi-content .why-mhairi-title {
     -ms-grid-column: 2;
     -ms-grid-column-span: 1;
     grid-column: 2/3;
     -ms-grid-row: 1;
-    grid-row: 1/1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
     text-align: start;
     padding: 0 0 0 1em;
   }
@@ -4519,6 +4526,12 @@ input[type='checkbox'] {
 
 .why-mhairi-content .home-about-text .sect-subtitle {
   margin: 0 auto 2em auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .home-about-text .sect-subtitle {
+    margin: 0 auto 1em auto;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
@@ -8034,6 +8047,18 @@ input[type='checkbox'] {
   margin: 2em 0;
 }
 
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .why-mhairi-title {
+    margin: 2em 1em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-title {
+    margin: 0;
+  }
+}
+
 .why-mhairi-content {
   margin-top: 0;
   padding-bottom: 4em;
@@ -8049,14 +8074,14 @@ input[type='checkbox'] {
 @media only screen and (min-width: 768px) {
   .why-mhairi-content {
     background-color: white;
-    height: 31.5em;
+    height: 34.5em;
     padding-bottom: 0;
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: auto 25em 2em 16em auto;
         grid-template-columns: auto 25em 2em 16em auto;
-    -ms-grid-rows: 4em 23em auto;
-        grid-template-rows: 4em 23em auto;
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
   }
 }
 
@@ -8064,39 +8089,34 @@ input[type='checkbox'] {
   .why-mhairi-content {
     -ms-grid-columns: auto 25em 2em 16em auto;
         grid-template-columns: auto 25em 2em 16em auto;
-    -ms-grid-rows: 4em 20em auto;
-        grid-template-rows: 4em 20em auto;
     height: 29em;
   }
 }
 
-@media only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
+@media only screen and (min-width: 1200px) {
   .why-mhairi-content {
-    height: 25em;
-    -ms-grid-rows: 4em 18em auto;
-        grid-template-rows: 4em 18em auto;
+    height: 29em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .why-mhairi-content {
     height: 25em;
-    -ms-grid-rows: 4em 16em auto;
-        grid-template-rows: 4em 16em auto;
   }
 }
 
-.why-mhairi-content .home-about-title {
+.why-mhairi-content .why-mhairi-title {
   padding-top: 0;
 }
 
 @media only screen and (min-width: 768px) {
-  .why-mhairi-content .home-about-title {
+  .why-mhairi-content .why-mhairi-title {
     -ms-grid-column: 2;
     -ms-grid-column-span: 1;
     grid-column: 2/3;
     -ms-grid-row: 1;
-    grid-row: 1/1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
     text-align: start;
     padding: 0 0 0 1em;
   }
@@ -8145,6 +8165,12 @@ input[type='checkbox'] {
 
 .why-mhairi-content .home-about-text .sect-subtitle {
   margin: 0 auto 2em auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .why-mhairi-content .home-about-text .sect-subtitle {
+    margin: 0 auto 1em auto;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px) {
