Add new content for help section

--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -11,9 +11,10 @@ layout: 'base.njk'
         <div class="about-hero-text">
             <div class="about-hero-content">
                 <h1 class="about-title">Hi Ya!</h1>
-                <h2 class="logo-2">I'm Mhairi</h2>
+                <h2 class="logo-2">Meet Mhairi Todd</h2>
+                <p class="normal-text pronounce">// ma · ree //</p>
                 <p class="sect-title about-text">
-                    Discover your confidence tap into your power and find success on your own terms                
+                    THE TRANSFORMATION COACH FOR WOMEN WHO WANT A LIFE WITHOUT LIMITS               
                 </p>
             </div>
             
@@ -21,54 +22,126 @@ layout: 'base.njk'
     </section>
     <!-- END: hero section -->
 
+    <hr class="half-width-hr">
+
+    <!-- stand alone testimonial -->
+    <div class="testimonial-alone">
+        <div class="testimonial-alone-exert">
+            <p>
+                “I went from seemingly ‘having it all’ (but inwardly restless and full of self-doubt) to… divorced. It changed the game. Then my journey to happiness truly began.”
+            </p>
+        </div>
+        <div class="testimonial-alone-author">
+            <h3 class="rob-font testimonial-alone-author-job">
+                - Mhairi Todd 
+            </h3>
+        </div>
+    </div>
+    <!-- END: stand alone testimonial -->
+
+    <hr class="half-width-hr">
+
     <!-- about detail section -->
     <section class="about-detail">
-        <h1 class="about-detail-title sect-title">I WENT FROM SEEMINGLY HAVING IT ALL BUT INWARDLY RESTLESS & FULL OF SELF DOUBT TO…<span class="fw-b">DIVORCED</span></h1>
-        <h3 class="about-detail-subtitle sect-subtitle">IT CHANGED THE GAME AND THAT IS WHERE MY JOURNEY TO HAPPINESS TRULY BEGAN</h3>
+        <h3 class="sect-title">BUT WHAT DO I KNOW?</h3>
         <hr class="pink-hr">
         <div class="about-detail-content">
             <div class="first-col">
                 <p class="normal-text">
-                    There I was, early 30’s, divorced, in a career which supposedly ticked all the boxes but didn’t tick mine and feeling like total sh&t about myself.  I had no self worth and no idea how to change that.
+                    I’ve been that woman. There I was. Early thirties, divorced, in a career which ticked all the boxes (except my own) and feeling like total sh*t about myself. I had no self-worth and no idea how to change that. Instead of a way out, I saw roadblock after roadblock. 
                 </p>
                 <p class="normal-text">
-                    The real work started from within.  My unhappiness was nothing to do with the actions I was taking.  I’d previously lived by the ‘feel the fear and do it anyway’ mantra which was insanely effective in keeping me progressing, but totally ineffective in living a happy, purposeful, powerful life!
+                    I’d previously lived by the ‘feel the fear and do it anyway’ mantra, which was insanely effective in keeping me progressing, but totally ineffective when the progress wasn’t leading me to live a happy life full of purpose. 
                 </p>
-                
                 <p class="normal-text">
-                    So I did something very different for me. I made the decision to work on me. I invested in me with no outcome expected other than I would undoubtedly be in a better place than I started. 
+                    The real aha moment came for me when I hit rock bottom.  My relationship breaking down was such a shock and I felt utterly at sea. I was unavoidably miserable, I couldn't distract myself from it anymore, it was there and in my face in all its uncomfortable glory. 
                 </p>
-            </div>
-            <div class="second-col">
                 <p class="normal-text">
-                    And you know what happened? It only bloody worked! I started to make choices from an authentic place rather than a superficial one.  I changed jobs to a company with a heart and purpose more aligned with what I stood for. More importantly I turned down a Directorship and ridiculous salary to make that change. And it felt good! 
+                    And that's what I needed. I needed that hideous experience to jolt me into the reality that I didn't deserve to live that way, nor did I have to. No one could change it but me. My life, my choices, my happiness. 
                 </p> 
+            </div>
+            <div class="second-col"> 
                 <p class="normal-text">
-                    I started a diploma in life coaching because I supported the ethos.  I loved the idea of helping people step beyond their psychology and leap forward into their dream life. I met an incredible partner and we had a beautiful baby boy even though I’d previously been terrified about how having children might affect my ‘success’ in my career….  The positive, life fulfilling, incredible magic stuff just kept coming.  All because I had actually spent the time, effort and energy in the one place it seemed most alien to: <strong>on myself</strong>. 
+                   Then I did something different. I made the decision to work on me. I faced each happiness blocker with a completely new mindset, one of 'lets see', 'lets try', 'lets grow’.
+                </p>
+                <p class="normal-text">
+                    I started to make choices from an authentic place rather than a superficial one. I changed jobs to a company with a heart and purpose aligned with my own beliefs. I turned down a directorship and ridiculous salary to make that change for me. And it felt seriously good.
+                </p>
+                <p class="normal-text">
+                    I started my diploma in Life Coaching because I supported the ethos and loved the idea of helping people step beyond their psychology and leap forward into their dream life. I met an incredible partner and had a beauty baby boy (even though I’d previously been terrified about how having children might affect my ‘success’ in my career). The positive, life-fulfilling stuff just kept on coming. All because I spent the time, effort and energy in the one place it seemed most alien to; <span class="fw-b">on myself</span>. 
                 </p>
             </div>
         </div>
-        <div class="about-detail-quote">
-            <p class="sect-title">So, that’s a nice story, but how does that help you? </p>
-            <p class="sect-subtitle pink-text">
-                I’ve been where you are:
-            </p>
-            <br>
+        <div class="italic text-center">
             <p class="normal-text">
-                You know you have great skills but you often lack confidence
+                I realised I didn't need to have all the answers, I just needed to ask the questions. 
             </p>
             <p class="normal-text">
-                You're not as happy or focused in your life as you want to be
+                And in the end that was the magic formula.
             </p>
-            <p class="normal-text">
-                There are aspects of your life you want to alter but don't know how.
-            </p>
-            <br>
-            <p class="sect-subtitle pink-text">I emerged as my best self, now I’m going to help you do the same.</p>
         </div>
     </section>
     <!-- END: about detail section -->
 
+    <!-- how i can help section -->
+    <section class="how-i-help">
+        <div class="known-for-title">
+            <h2 class="sect-title">
+                SO, HOW Can I HELP YOU?
+            </h2>
+            <h3 class="sect-subtitle">
+                I know your story, because I’ve lived it.
+            </h3>
+        </div>
+        <div class="how-i-help-content">
+            <div class="how-i-help-item" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000">
+                <div class="how-i-help-item-intro">
+                    <h3 class="how-i-help-item-subtitle rob-font">
+                        I HAVE LEVELLED UP FROM.
+                    </h3>
+                </div>
+                <ul class="how-i-help-list">
+                    <li class="normal-text how-i-help-text">
+                        - Wanting to alter aspects of where I was, but not knowing where to start or how to get there
+                    </li>
+                    <li class="normal-text how-i-help-text">
+                        - Feeling immensely lost and vulnerable
+                    </li>
+                    <li class="normal-text how-i-help-text">
+                        - Knowing I had talent, but feeling like a fraud
+                    </li>
+                    <li class="normal-text how-i-help-text">
+                        - Not being at all content or as centred in my life as I deserved to be
+                    </li>
+                </ul>
+            </div>
+            <hr class="half-width-hr pink-hr d-md-none">
+            <div class="how-i-help-item" data-aos="fade-right" data-aos-offset="150" data-aos-duration="1000" data-aos-delay="1000">
+                <div class="how-i-help-item-intro">
+                    <h3 class="how-i-help-item-subtitle rob-font">
+                        AND GOT TO A PLACE WHERE.
+                    </h3>
+                </div>
+                <ul class="how-i-help-list">
+                    <li class="normal-text how-i-help-text">
+                        - I established sincere self-worth and unlocked the courage to make decisions for me
+                    </li>
+                    <li class="normal-text how-i-help-text">
+                        - I chose happiness based on what fed my soul 
+                    </li>
+                    <li class="normal-text how-i-help-text">
+                        - I listened to my gut and made decisions based on where I knew I wanted to be 
+                    </li>
+                    <li class="normal-text how-i-help-text">
+                        - I achieved fulfillment and balance in every aspect of my life 
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- END: how i can help section -->
+
+    <hr class="half-width-hr">
     <!-- what I'm known for section -->
     <section class="known-for">
         <div class="known-for-title">
@@ -79,19 +152,19 @@ layout: 'base.njk'
         <div class="known-for-content">
             <div class="known-for-item">
                 <i class="fas fa-praying-hands"></i>
-                <p class="known-for-text normal-text">Teaching women that the power they seek lies within them </p>
+                <p class="known-for-text normal-text">Teaching women that they have the power to change their lives</p>
             </div>
             <div class="known-for-item">
                 <i class="fas fa-graduation-cap"></i>
-                <p class="known-for-text normal-text">DISC certified I help unlock motivators, drivers and fears to maximise performance </p>
+                <p class="known-for-text normal-text">I help unlock motivators, drivers and fears to maximise performance. I’m DISC certified</p>
             </div>
             <div class="known-for-item">
                 <i class="fab fa-instagram-square"></i>
-                <p class="known-for-text normal-text">Writing short but inspirational Instagram posts to keep you inspired daily</p>
+                <p class="known-for-text normal-text">Writing Instagram posts that give you daily tools to stop, think and feel</p>
             </div>
             <div class="known-for-item">
                 <i class="fas fa-glass-cheers"></i>
-                <p class="known-for-text normal-text">Being a lover of bubbles…the kind you can drink 
+                <p class="known-for-text normal-text">Being a big lover of bubbles…the kind you can drink 
                 </p>
             </div>
         </div>
