--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -104,7 +104,7 @@
                        (Or pretty pictures and a few laughs at the very least!)
                     </p>
                     <div class="about-cta-btn cf-button">
-                        <a href="https://www.instagram.com/theroadblockcoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
+                        <a href="https://www.instagram.com/theroadblockcoach/?hl=en" target="_blank" class="btn-pink normal-text">FOLLOW ME!</a>
                     </div>
                 </div>
             </div>
