Adjust margins to client love

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -179,7 +179,7 @@ layout: 'base.njk'
             <img src="static/img/Mhairi_pics/sitting_yellow_coat_comp.jpg" alt="mhairi-life-coach-yellow-coat">
         </div>
         <div class="home-about-text">
-            <p class="sect-subtitle pink-text">
+            <p class="home-about-subtitle pink-text">
                 I’ve been where you are:
             </p>
             <p class="normal-text">
@@ -224,7 +224,7 @@ layout: 'base.njk'
 
 
 <!-- Client love section -->
-<div class="testimonial-alone">
+<div class="testimonial-alone client-love">
     <h3 class="sect-title">
             Client love 
     </h3>
