Increase margins why mhairi

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -180,7 +180,7 @@ layout: 'base.njk'
         </div>
         <div class="home-about-text">
             <p class="home-about-subtitle pink-text">
-                I’ve been where you are:
+                I’ve been where you are
             </p>
             <p class="normal-text">
                 I worked for many years in senior roles with fancy job titles and salaries, but I was never truly fulfilled. After completing a degree in Medical Biology, I knew my passion lived outside the lab. But what to do? Youthful ignorance firmly in hand, I gravitated to where I thought I ‘should’ be, led entirely by society’s depiction of success. When I got there, I realised I’d been so busy becoming what I thought I should be, that I’d completely lost touch with who I actually wanted to be. What changed my world? 
