--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4482,7 +4482,7 @@ input[type='checkbox'] {
 
 .why-mhairi-content {
   margin-top: 0;
-  padding-bottom: 4em;
+  padding-bottom: 3em;
   text-align: center;
 }
 
@@ -4568,7 +4568,7 @@ input[type='checkbox'] {
 }
 
 .why-mhairi-content .home-about-text {
-  margin: 3em auto;
+  margin: 1em auto 3em auto;
   padding: 0 2em;
 }
 
@@ -8410,7 +8410,7 @@ input[type='checkbox'] {
 
 .why-mhairi-content {
   margin-top: 0;
-  padding-bottom: 4em;
+  padding-bottom: 3em;
   text-align: center;
 }
 
@@ -8496,7 +8496,7 @@ input[type='checkbox'] {
 }
 
 .why-mhairi-content .home-about-text {
-  margin: 3em auto;
+  margin: 1em auto 3em auto;
   padding: 0 2em;
 }
 
